# ble-sensor

./: Cargo.toml  Cross.toml  Dockerfile.arm64  Dockerfile.armv6  README.md
.cargo/: config.toml
.github/workflows/: rust_ci.yml
conf/: config.toml  tempsys-scan.service
src/: main.rs
