[package]
name = "ble-sensor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.13"
bluer = { version = "0.15", features = ["bluetoothd"] }
futures = "0.3"
tokio = "1"
env_logger = "0.9"
log = "0.4"
byteorder = "1.4"
clap = { version = "3.1", features = ["derive", "env"] }
