[package]
name = "ble-sensor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
rumqttc = "0.24"
bluer = { version = "0.17", features = ["bluetoothd"] }
futures = "0.3"
tokio = "1"
env_logger = "0.11"
log = "0.4"
byteorder = "1"
clap = { version = "4.5", features = ["derive", "env"] }
