[package]
name = "tempsys-scan"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
rumqttc = "0.24"
bluer = { version = "0.17", features = ["bluetoothd"] }
futures = "0.3"
tokio = "1"
env_logger = "0.11"
log = "0.4"
byteorder = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
built = { version = "0.7", features = ["git2", "semver"] }
